--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <img src="assets/gambar_segitiga.png" class="center-image"/>  
     </section>
     <hr>
-    <center><h2 style="margin-bottom: 50px;">Hitung Luas Segitiga</h2></center>
+    <center><h2 style="margin-bottom: 50px; color: white;">Hitung Luas Segitiga</h2></center>
     <main>
         <section class="input-section">
             <label for="alas-input">Alas Segitiga</label>
-            <input type="number" id="alas-input" placeholder="0">
+            <input type="number" id="alas-input" placeholder="Masukkan Alas Segitiga">
 
             <label for="tinggi-input">Tinggi Segitiga</label>
-            <input type="number" id="tinggi-input" placeholder="0">
+            <input type="number" id="tinggi-input" placeholder="Masukkan Tinggi Segitiga">
 
             <label for="luas-input">Luas Segitiga</label>
             <input type="number" id="luas-input" disabled="true" placeholder="0">
@@ -34,7 +34,6 @@
         </section>
     </main>
     
-<div class="pemisah"></div>
 <!--Code Keliling segitiga-->
 <div id="luas-segitiga">
     <header id="keliling-header">
@@ -45,20 +44,20 @@
     <img src="assets/keliling.jpg" class="center-gambar"/>  
     </section>
     <hr>
-    <center><h2 style="margin-bottom: 50px;">Hitung Luas Segitiga</h2></center>
+    <center><h2 style="margin-bottom: 50px; color: white">Hitung Keliling Segitiga</h2></center>
     <main>
         <section class="input-section">
             <label for="sisi-1">Sisi 1 Segitiga</label>
-            <input type="number" id="sisi-1" placeholder="0">
+            <input type="number" id="sisi-1" placeholder="Masukkan Sisi 1 Segitiga">
 
             <label for="sisi-2">Sisi 2 Segitiga</label>
-            <input type="number" id="sisi-2" placeholder="0">
+            <input type="number" id="sisi-2" placeholder="Masukkan Sisi 2 Segitiga">
 
             <label for="sisi-3">Sisi 3 Segitiga</label>
-            <input type="number" id="sisi-3" placeholder="0">
+            <input type="number" id="sisi-3" placeholder="Masukkan Sisi 3 Segitiga">
 
             <label for="keliling-input">Keliling Segitiga</label>
-            <input type="number" id="keliling-input" disabled="true" placeholder="0">
+            <input type="number" id="keliling-input" disabled="true" placeholder="">
         </section>
         <section class="button">
             <button id="hitung-keliling">Hitung</button>
